--- a/fish-discover.html
+++ b/fish-discover.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+    <div class="card-btn"><a href="https://gemdelle.github.io/Games-BirthdayCard/"></a></div>
+    <div class="memotest-btn"><a href="https://gemdelle.github.io/Games-HalloweenMemotest/"></a></div>
     <h1>Choose a number and discover your Royal Fish</h1>
     <div class="buttoncontainer">
         <button id="button01" class="active">01</button>
